# humanoid-rollerskatingv1

./: .gitignore  README.md  ROLLER_PROJECT_STATUS.md  pyproject.toml
dataset/ref_pose/: push_start_pose_b.npy  steer_start_pose_b.npy
dataset/roller_push/: README.md  human_push_1.npy  human_push_2.npy  manifest.json
docs/: PROJECT_SETTINGS.md  SMOKE_TEST.md  WORKFLOW.md
rsl_rl/algorithms/: amp_ppo.py
rsl_rl/env/: vec_env.py
rsl_rl/runners/: amp_on_policy_runner.py
rsl_rl/storage/: replay_buffer_multi.py
rsl_rl/utils/: motion_loader_g1.py
src/mjlab_husky/: amp_dataset.py  control_spec.py  project_paths.py
src/mjlab_husky/envs/: __init__.py  g1_roller_rl_env.py
src/mjlab_husky/rl/: config.py
src/mjlab_husky/scripts/: build_amp_dataset.py  play.py  train.py  validate_amp_dataset.py
src/mjlab_husky/tasks/: bootstrap.py
src/mjlab_husky/tasks/roller/: __init__.py  roller_env_cfg.py
src/mjlab_roller/: __init__.py
src/mjlab_roller/assets/: __init__.py
src/mjlab_roller/assets/robots/: __init__.py
src/mjlab_roller/cli/: __init__.py  build_amp_dataset.py  play.py  train.py  validate_amp_dataset.py
src/mjlab_roller/core/: __init__.py  project_paths.py
src/mjlab_roller/data/: __init__.py  amp_dataset.py
src/mjlab_roller/envs/: __init__.py  g1_roller_rl_env.py
src/mjlab_roller/rl/: __init__.py  exporter_utils.py  vecenv_wrapper.py
src/mjlab_roller/tasks/: bootstrap.py  registry.py
src/mjlab_roller/tasks/roller/: roller_env_cfg.py
tests/: test_amp_dataset.py  test_project_paths.py  test_task_bootstrap.py
(+22 files in other folders)
